--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ main #food-card {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  padding-bottom: 100px;
+  padding-bottom: 85px;
   background-color: #f5c20c;
 }
 
@@ -434,19 +434,22 @@ main #food-card .row {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 422px;
+  width: 68.7%;
+  margin: 0 0 0px;
 }
 
 main #food-card .row .column {
-  margin: 5px;
+  width: 33.3%;
+  height: 360px;
   -webkit-perspective: 700px;
           perspective: 700px;
+  margin: 0 0 30px 30px;
 }
 
 main #food-card .row .column .food-img {
   position: relative;
-  width: 420px;
-  height: 360px;
+  width: 100%;
+  height: 100%;
 }
 
 main #food-card .row .column .food-img:hover > .front {
@@ -596,16 +599,18 @@ main #menu {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  background-color: #fff;
+  background-color: #000000;
 }
 
 main #menu .menu-nav {
+  width: 80%;
   text-align: center;
 }
 
 main #menu .menu-nav h1 {
   font-size: 48px;
   margin: 70px 0 30px 0;
+  color: #f0bd0c;
 }
 
 main #menu .menu-nav .menu-items {
@@ -617,23 +622,22 @@ main #menu .menu-nav .menu-items {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 1310px;
+  width: 100%;
   height: 64px;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
 }
 
 main #menu .menu-nav .menu-items .menu-item {
   list-style-type: none;
-}
-
-main #menu .menu-nav .menu-items .menu-item .menu-link {
   text-decoration: none;
-  color: black;
-  font-size: 30px;
+  color: #ffffff;
+  font-size: 36px;
+  font-weight: 800;
+  width: 14%;
 }
 
-main #menu .pet-food {
+main #menu .meal {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -645,61 +649,43 @@ main #menu .pet-food {
   height: 810px;
 }
 
-main #menu .pet-food .pet-food-intro {
+main #menu .meal .meal-intro .meal-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 532px;
-  height: 422px;
+  border-bottom: 1px solid #ffffff;
 }
 
-main #menu .pet-food .pet-food-intro h2 {
-  font-size: 36px;
+main #menu .meal .meal-intro .meal-title img {
+  width: 23px;
+  height: 23px;
+  margin-right: 2px;
 }
 
-main #menu .pet-food .pet-food-intro .row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  border-bottom: 1px solid gray;
+main #menu .meal .meal-intro .meal-title h2 {
+  color: #dc8b40;
 }
 
-main #menu .pet-food .pet-food-intro .row .column h3 {
-  font-size: 30px;
-}
-
-main #menu .pet-food .pet-food-intro .row .column .content {
-  font-size: 21px;
-}
-
-main #menu .pet-food .pet-food-intro .row .column .price {
-  font-size: 30px;
-}
-
-main #menu .pet-food .food-pic {
+main #menu .food-pic {
   position: relative;
   width: 709px;
   height: 812px;
 }
 
-main #menu .pet-food .food-pic .small-pic {
+main #menu .food-pic .small-pic {
   position: absolute;
   width: 350px;
   height: 400px;
 }
 
-main #menu .pet-food .food-pic .small-pic2 {
+main #menu .food-pic .small-pic2 {
   top: 405px;
 }
 
-main #menu .pet-food .food-pic .large-pic {
+main #menu .food-pic .large-pic {
   position: absolute;
   top: 0;
   left: 355px;
