--- a/style.scss
+++ b/style.scss
@@ -358,7 +358,7 @@ main {
   // 好食餐點區塊開始
   #food-card {
     @include section-setting;
-    padding-bottom  : 100px;
+    padding-bottom  : 85px;
     background-color: #f5c20c;
 
     h1 {
@@ -366,20 +366,22 @@ main {
     }
 
     .row {
-      display           : flex;
-      justify-content   : space-between;
-      // width          : 1322px;
-      height            : 422px;
+      display        : flex;
+      justify-content: space-between;
+      width          : 68.7%;
+      margin         : 0 0 -30px --30px;
 
       .column {
-        margin     : 5px;
+        width      : 33.3%;
+        height     : 360px;
         perspective: 700px;
+        margin     : 0 0 30px 30px;
 
         // 翻轉效果製作開始
         .food-img {
           position: relative;
-          width   : 420px;
-          height  : 360px;
+          width   : 100%;
+          height  : 100%;
 
           &:hover>.front {
             transform: rotateY(-180deg);
@@ -476,15 +478,15 @@ main {
               perspective: 1000px;
               transform  : translateZ(95px) scale(0.81);
               font-weight: 600;
-              color: white;
+              color      : white;
             }
 
             h2 {
-              font-size: 36px;
+              font-size    : 36px;
               margin-bottom: 15px;
             }
 
-            p{
+            p {
               font-size: 24px;
             }
           }
@@ -500,105 +502,95 @@ main {
   // 幸福菜單區塊開始
   #menu {
     @include section-setting;
-    background-color: #fff;
+    background-color: #000000;
 
     // 菜單導航
     .menu-nav {
+      width: 80%;
       text-align: center;
 
       h1 {
         @include main-heading;
+        color: #f0bd0c;
       }
 
       .menu-items {
         display        : flex;
         justify-content: space-around;
         align-items    : center;
-        width          : 1310px;
+        width          : 100%;
         height         : 64px;
-        border-top     : 1px solid black;
-        border-bottom  : 1px solid black;
+        border-top     : 1px solid #ffffff;
+        border-bottom  : 1px solid #ffffff;
 
         .menu-item {
           list-style-type: none;
-
-          .menu-link {
-            text-decoration: none;
-            color          : black;
-            font-size      : 30px;
-          }
+          text-decoration: none;
+          color          : #ffffff;
+          font-size      : 36px;
+          font-weight: 800;
+          width: 14%;
         }
       }
     }
 
     // 菜單導航
-    // 寵物鮮食菜單製作開始
-    .pet-food {
+    // 菜單製作開始
+    .meal {
       display        : flex;
       justify-content: space-between;
       margin-top     : 52px;
       width          : 1310px;
       height         : 810px;
 
-      .pet-food-intro {
-        display       : flex;
-        flex-direction: column;
-        align-items   : center;
-        width         : 532px;
-        height        : 422px;
-
-        h2 {
-          font-size: 36px;
-        }
-
-        .row {
-          display      : flex;
-          border-bottom: 1px solid gray;
-
-          .column {
-            h3 {
-              font-size: 30px;
-            }
-
-            .content {
-              font-size: 21px;
-            }
-
-            .price {
-              font-size: 30px;
-            }
+      .meal-intro {
+        .meal-title {
+          display: flex;
+          align-items: center;
+          border-bottom: 1px solid #ffffff;
+          img {
+            width: 23px;
+            height: 23px;
+            margin-right: 2px;
+          }
+          h2 {
+            color: #dc8b40;
           }
         }
+        .meal-content {
 
-      }
-
-      .food-pic {
-        position: relative;
-        width   : 709px;
-        height  : 812px;
-
-        .small-pic {
-          position: absolute;
-          width   : 350px;
-          height  : 400px;
-        }
-
-        .small-pic2 {
-          top: 405px;
-        }
-
-        .large-pic {
-          position: absolute;
-          top     : 0;
-          left    : 355px;
-          width   : 350px;
-          height  : 805px;
         }
       }
     }
 
-    // 寵物鮮食菜單製作結束
+    .food-pic {
+      position: relative;
+      width   : 709px;
+      height  : 812px;
+
+      .small-pic {
+        position: absolute;
+        width   : 350px;
+        height  : 400px;
+        }
+
+      .small-pic2 {
+        top: 405px;
+        }
+
+      .large-pic {
+        position: absolute;
+        top     : 0;
+        left    : 355px;
+        width   : 350px;
+        height  : 805px;
+      }
+    }
   }
+
+
+    // 寵物鮮食菜單製作結束
+
 
   // 幸福菜單區塊結束
 
@@ -681,8 +673,8 @@ main {
 
     }
 
-
   }
+
 }
 
 footer {
