--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ main #concept article .text {
 }
 
 main #concept article .text .concept-title {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin-bottom: 20px;
 }
 
@@ -202,8 +202,8 @@ main #concept article .text .cat-img {
 }
 
 main #concept article .text .concept-text {
-  font-size: 24px;
-  line-height: 48px;
+  font-size: 1.3vw;
+  line-height: 2.6vw;
 }
 
 main #concept article .concept-img {
@@ -242,12 +242,12 @@ main #environment .environment-img h1 {
   position: absolute;
   top: 50px;
   left: 50px;
-  width: 240px;
-  height: 95px;
+  width: 12.5vw;
+  height: 5vw;
   background-color: #f0bd0c;
-  font-size: 48px;
+  font-size: 2.5vw;
   text-align: center;
-  line-height: 100px;
+  line-height: 5vw;
   z-index: 2;
 }
 
@@ -404,8 +404,8 @@ main #environment .dialog-img {
   position: absolute;
   top: 200px;
   right: 100px;
-  width: 610px;
-  height: 266px;
+  width: 32vw;
+  height: 14vw;
 }
 
 main #food-card {
@@ -426,7 +426,7 @@ main #food-card {
 }
 
 main #food-card h1 {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin: 70px 0 30px 0;
 }
 
@@ -513,7 +513,7 @@ main #food-card .row .column .food-img .front .front-img .cover {
 
 main #food-card .row .column .food-img .front .front-img .cover span {
   color: white;
-  font-size: 36px;
+  font-size: 1.9vw;
   font-weight: 600;
 }
 
@@ -622,7 +622,7 @@ main #menu .menu-type {
 }
 
 main #menu .menu-type h1 {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin: 70px 0 30px 0;
   color: #f0bd0c;
 }
@@ -1567,7 +1567,7 @@ main #adoption-info {
 }
 
 main #adoption-info h1 {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin: 70px 0 30px 0;
 }
 
@@ -1617,7 +1617,7 @@ main #story {
 }
 
 main #story h1 {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin: 70px 0 30px 0;
 }
 
