--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 // 主要標題h1的統一設定
 @mixin main-heading {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin   : 70px 0 30px 0;
 }
 
@@ -199,7 +199,7 @@ main {
         width    : 40%;
 
         .concept-title {
-          font-size    : 48px;
+          font-size    : 2.5vw;
           margin-bottom: 20px;
         }
 
@@ -216,8 +216,8 @@ main {
         }
 
         .concept-text {
-          font-size  : 24px;
-          line-height: 48px;
+          font-size  : 1.3vw;
+          line-height: 2.6vw;
         }
       }
 
@@ -256,12 +256,12 @@ main {
         position        : absolute;
         top             : 50px;
         left            : 50px;
-        width           : 240px;
-        height          : 95px;
+        width           : 12.5vw;
+        height          : 5vw;
         background-color: #f0bd0c;
-        font-size       : 48px;
+        font-size       : 2.5vw;
         text-align      : center;
-        line-height     : 100px;
+        line-height     : 5vw;
         z-index         : 2;
       }
 
@@ -381,8 +381,8 @@ main {
       position: absolute;
       top     : 200px;
       right   : 100px;
-      width   : 610px;
-      height  : 266px;
+      width   : 32vw;
+      height  : 14vw;
     }
   }
 
@@ -455,7 +455,7 @@ main {
 
                 span {
                   color      : white;
-                  font-size  : 36px;
+                  font-size  : 1.9vw;
                   font-weight: 600;
                 }
 
