--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ html {
   scroll-behavior: smooth;
 }
 
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 #mask {
   display: none;
   position: fixed;
@@ -157,6 +165,21 @@ main #banner .icons .icon img {
   main #banner .nav {
     display: none;
   }
+  main .nav-mobile {
+    display: block;
+  }
+  main .nav-mobile .logo-mobile {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    z-index: 999;
+    width: 60px;
+    height: 60px;
+  }
+  main .nav-mobile .logo-mobile:active {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
 }
 
 main #concept {
@@ -168,7 +191,7 @@ main #concept {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-top: 130px;
+  padding-top: 100px;
   width: 100%;
   height: 1280px;
   background-color: #fff;
@@ -199,30 +222,84 @@ main #concept article .text {
 }
 
 main #concept article .text .concept-title {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin-bottom: 20px;
 }
 
 main #concept article .text .dog-img {
-  width: 55px;
-  height: 70px;
-  margin-left: 30px;
+  width: 2.9vw;
+  height: 3.6vw;
+  margin-left: 1.6vw;
 }
 
 main #concept article .text .cat-img {
-  width: 60px;
-  height: 60px;
+  width: 3vw;
+  height: 3vw;
   margin-left: 15vw;
 }
 
 main #concept article .text .concept-text {
-  font-size: 1.3vw;
-  line-height: 2.6vw;
+  font-size: 24px;
+  line-height: 48px;
 }
 
 main #concept article .concept-img {
   width: 34.4vw;
   height: 24.5vw;
+}
+
+@media screen and (max-width: 1200px) {
+  main #concept article {
+    width: 80%;
+    height: 400px;
+    margin-bottom: 0px;
+  }
+  main #concept article .text {
+    width: 50%;
+  }
+  main #concept article .text .concept-title {
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+  main #concept article .text .concept-text {
+    font-size: 21px;
+    line-height: 45px;
+  }
+  main #concept article .concept-img {
+    width: 413px;
+    height: 294px;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  main #concept {
+    height: 1910px;
+  }
+  main #concept article {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+    height: 800px;
+    padding: 0 64px 0 64px;
+  }
+  main #concept article .text {
+    width: 100%;
+  }
+  main #concept article .text .concept-title {
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+  main #concept article .text .concept-text {
+    font-size: 24px;
+    line-height: 45px;
+  }
+  main #concept article .concept-img {
+    width: 580px;
+    height: 410px;
+  }
 }
 
 main #environment {
@@ -259,7 +336,7 @@ main #environment .environment-img h1 {
   width: 12.5vw;
   height: 5vw;
   background-color: #f0bd0c;
-  font-size: 48px;
+  font-size: 2.5vw;
   text-align: center;
   line-height: 5vw;
   z-index: 2;
@@ -274,9 +351,9 @@ main #environment .environment-img .large-img {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 66%, 0% 100%);
           clip-path: polygon(0 0, 100% 0, 100% 66%, 0% 100%);
   border-radius: 10px;
-  background-image: url(./images/店家環境/shop01.jpg);
+  background: url(./images/店家環境/shop01.jpg) no-repeat;
   background-size: cover;
-  background-position: 0px -216px;
+  background-position: 0px -100px;
 }
 
 main #environment .environment-img .large-img:hover > .filter1 {
@@ -447,7 +524,7 @@ main #food-card {
 }
 
 main #food-card h1 {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin: 70px 0 30px 0;
 }
 
@@ -643,7 +720,7 @@ main #menu .menu-type {
 }
 
 main #menu .menu-type h1 {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin: 70px 0 30px 0;
   color: #f0bd0c;
 }
@@ -1805,7 +1882,7 @@ main #adoption-info {
 }
 
 main #adoption-info h1 {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin: 70px 0 30px 0;
 }
 
@@ -2003,7 +2080,7 @@ main #story {
 }
 
 main #story h1 {
-  font-size: 48px;
+  font-size: 2.5vw;
   margin: 70px 0 30px 0;
 }
 
@@ -2041,7 +2118,7 @@ main #story .swiper .swiper-slide img {
 main #story .swiper .slide-3:hover {
   width: 100%;
   height: 100%;
-  background-image: url(./i);
+  background-image: url(./images/下一站家/dog-3@2x.png);
 }
 
 footer {
@@ -2113,5 +2190,37 @@ footer .contact-details {
 footer .line {
   width: 100%;
   padding: 45px 0;
+}
+
+.nav-mobile {
+  position: fixed;
+  z-index: 999;
+  display: none;
+  width: 100vw;
+  height: 100vh;
+}
+
+.nav-mobile .nav-banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: rgba(0, 0, 0, 0.85);
+  -webkit-transition: height .5s ease;
+  transition: height .5s ease;
+}
+
+.nav-mobile .nav-banner .nav-items-mobile {
+  display: none;
+  text-align: center;
+}
+
+.nav-mobile .nav-banner .nav-item-mobile {
+  margin: 30px;
+}
+
+.nav-mobile .nav-banner .nav-link-mobile {
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
